--- a/Final Report/Dan's Tech Appendix.Rmd
+++ b/Final Report/Dan's Tech Appendix.Rmd
@@ -586,6 +586,13 @@ part_tu04_sex_TRCHILDNUM_plot_plotting <- ggplot(part_sex_weighted_means_data_pl
 print(part_tu04_sex_TRCHILDNUM_plot_plotting)
 ```
 
+
+
+
+
+
+
+
 # How The Time Spent on Traditionally Gendered Activities has Converged as Gender Roles have Broken Down
 
 Apply some reformatting to the data imported previously to better fit the exploratory analysis to be carried out. This includes the creation of a `TUBIRTHYEAR` feature to be used in separating people into different generations (Millenials, Baby Boomers etc.) represented by another feature called `TUGENERATION`. The `ATUS.CPS` dataset is then filtered to select regional data which can be joined to the dataset created so far for EDA.
@@ -593,7 +600,7 @@ Apply some reformatting to the data imported previously to better fit the explor
 ```{r, cache=TRUE}
 # Get birth year as a variable for purpose of classifying generation by subtratcting age from the year the datapoint was generated
 ATUS_dataset$TUBIRTHYEAR <- ATUS_dataset$TUYEAR - ATUS_dataset$TEAGE
-ATUS_dataset$TUGENERATION <- ifelse(ATUS_dataset$TUBIRTHYEAR < 1946, "Silent Generation",
+ATUS_dataset$TUGENERATION <- ifelse(ATUS_dataset$TUBIRTHYEAR < 1946, "Silent Generation", 
     ifelse(ATUS_dataset$TUBIRTHYEAR < 1965, "Baby Boomers",
         ifelse(ATUS_dataset$TUBIRTHYEAR < 1981, "Generation X", "Millennials")))
 
@@ -608,7 +615,7 @@ Next, collections of variable representing traditional gender roles can be extra
 # Create a data frame from relevant variables within ATUS Summary
 Gender.Roles.Data <- select(ATUS_dataset, TUCASEID, TESEX, TEAGE, TUFNWGTP, TUYEAR, TUDIARYDATE, TUGENERATION)
 
-# Create variables to be added to a data frame with relevant gender activities
+# Create variables to be added to a data frame with relevant gender activities 
 Working <- ATUS_dataset[, grep("^t05", names(ATUS_dataset))]
 House.Maintenance <- ATUS_dataset[, grep("^t0204", names(ATUS_dataset))]
 Vehicle.Maintenance <- ATUS_dataset[, grep("^t0207", names(ATUS_dataset))]
@@ -628,7 +635,9 @@ Gender.Roles.Data$Childcare <- rowSums(select(Childcare, t030101:t030399))
 Gender.Roles.Data <- inner_join(Gender.Roles.Data, ATUS.CPS.States, by = 'TUCASEID')
 ```
 
+This for-loop structure calculates weighted means for each possible combination of `variable`, `month`, `generation`, `region`, `year` and `sex`, which are to be used in modelling the data. The means are calculated for a demographic represented by one of these combinations and then attached to `Gender.Roles.Data` so that all of the individuals within that demographic / that conform to that combination have a weighted mean value for each variable.
 
+This for loop also calculates a `Gender.Roles.Differences` data frame to store the differences between genders in the weighted mean values corresponding to each combination of `variable`, `month`, `generation` and `year`. These differences can then be used to perform statistical tests on the changes over the given period of data in the time use within each of the investigated variables to study how gender roles have changed.
 
 ```{r, cache=TRUE}
 Gender.Roles.Differences <- data.frame('Year' = c(), 'Month' = c(), 'Variable' = c(), 'Generation' = c(), 'Difference' = c())
@@ -638,7 +647,7 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
         for (year in unique(Gender.Roles.Data$TUYEAR)) {
             for (month in unique(month(Gender.Roles.Data$TUDIARYDATE))) {
                 for (sex in c("M", "F")) {
-                    Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month(TUDAIRYDATE) == month, TUGENERATION == generation)
+                    Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month(TUDIARYDATE) == month, TUGENERATION == generation)
                     bottom.sum <- sum(Filtered.Data$TUFNWGTP)
                     top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
                     weighted.values <- top.sum / bottom.sum
@@ -715,7 +724,7 @@ fit.models.and.plot <- function(Data, variable, mu) {
 
 Generate plots for EDA to observe potential long-term trends over time for each of the chosen variables to investigate. `mu` values were experimented with once the data was first observe to roughly fall within the range of plotted values for each model.
 
-```{r}
+```{r, cache = TRUE}
 fit.models.and.plot(Gender.Roles.Train, 'Working', 250)
 fit.models.and.plot(Gender.Roles.Train, 'House.Maintenance', 10)
 fit.models.and.plot(Gender.Roles.Train, 'Vehicle.Maintenance', 10)
@@ -748,4 +757,49 @@ fit.models.and.plot(Gender.Roles.Plotting, 'Housework', 50)
 fit.models.and.plot(Gender.Roles.Plotting, 'Food.Preparation', 60)
 # Plot found in the Childcare section
 fit.models.and.plot(Gender.Roles.Plotting, 'Childcare', 50)
+```
+
+Rename to something to do with map or region
+
+```{r}
+region.weighted.differences <- function(Data) {
+    Gender.Roles.Differences <- data.frame('Year' = c(), 'Variable' = c(), 'Generation' = c(), 'Difference' = c())
+    for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Preparation", "Childcare")) {
+        for (generation in c("Silent Generation", "Baby Boomers", "Generation X", "Millennials")) {
+            for (year in unique(Data$TUYEAR)) {
+                for (region in 1:4) {
+                    for (sex in c("M", "F")) {
+                        Filtered.Data <- filter(Data, TESEX == sex, TUYEAR == year, TUGENERATION == generation, GEREG == region)
+                        bottom.sum <- sum(Filtered.Data$TUFNWGTP)
+                        top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
+                        weighted.values <- top.sum / bottom.sum
+                        if (sex == 'M') m.weighted.values <- weighted.values
+                    }
+                    weighted.difference <- m.weighted.values - weighted.values
+                    Gender.Roles.Differences <- rbind(Gender.Roles.Differences, data.frame('Year' = year, 'Variable' = variable, 'Generation' = generation, 'Difference' = unique(weighted.difference)))
+                }
+            }
+        }
+    }
+    return(Gender.Roles.Differences)
+}
+
+Gender.Roles.Differences.Region.Train <- region.weighted.differences(Gender.Roles.Train)
+Gender.Roles.Differences.Region.Validate <- region.weighted.differences(Gender.Roles.Validate)
+Gender.Roles.Differences.Region.Plotting <- region.weighted.differences(Gender.Roles.Plotting)
+```
+
+Code for running $t$-tests
+
+```{r}`
+Gender.Roles.Differences.Validate <- filter(Gender.Roles.Differences, month(TUDIARYDATE) %% 2 != 0)
+for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Preparation", "Childcare")) {
+    filter(Gender.Roles.Differences, 'Variable' == variable)
+    model <- lm(data=Gender.Roles.Differences.Validate, Difference ~ Year)
+    summary <- summary(model)
+    print(summary)
+    Year_t <- coefficients(summary)[2,3]
+    lm_p_value <- pt(Year_t, model$df, lower=TRUE)
+    print(lm_p_value)
+}
 ```
